# embassy

./: .gitignore
embassy-ra/: CHANGELOG.md  Cargo.toml  README.md  build.rs
embassy-ra/cfg/: generated.rs  ra_cfg.txt
embassy-ra/src/: generated.rs  gpio.rs  lib.rs
tests/ra/: Cargo.toml  ChipList.txt  Embed.toml  README.md  Readme.md  memory.x
tests/ra/.cargo/: config.toml
tests/ra/src/: main.rs
