[package]
name = "ra4m1-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
critical-section = { version = "1.0", optional = true }
cortex-m-rt = "0.7.5"
vcell = "0.1.3"
panic-halt = "1.0.0"
rtt-target = "0.6.1"

embassy-sync = { version = "0.6.2", path = "../../embassy-sync"}
embassy-executor = { version = "0.7.0", path = "../../embassy-executor", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4.0", path = "../../embassy-time", features = ["tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.3.0", path = "../../embassy-embedded-hal" }
embassy-ra = { path = "../../embassy-ra", features = [
    "ra4m1"
] }

# Optimize for size in release builds
[profile.release]
debug = true  # Include debug info
lto = true    # Enable link-time optimization
opt-level = "s"  # Optimize for size
codegen-units = 1  # Reduce parallel code generation units for better optimization

[profile.dev]
debug = true
opt-level = "s"  # Use size optimization even in debug builds for embedded
